k8s_devenv/environment/config/ingress_default_http.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-ingress-local
  namespace: default
  annotations:
    # restrict to private network scopes
    # look at externalTrafficPolicy otherwise client ip is obfuscated "nginx.ingress.kubernetes.io/whitelist-source-range": "192.168.1.0/24"
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: mkdevjenkins.beaverbay.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-jenkins
            port:
              number: 80
  - host: mkdevgocd.beaverbay.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gocdapp-server
            port:
              number: 8153
