k8s_devenv/environment/config/openproject.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openproject
---
apiVersion: v1
kind: Service
metadata:
  name: openproject
spec:
  type: ClusterIP
  selector:
    app: openproject
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject-http-ingress-local
  namespace: openproject
  annotations:
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"  
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"  
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mkdevopenproject.mediakraken.media
      secretName: letsencrypt-openproject-priv  
  rules:
    - host: mkdevopenproject.mediakraken.media
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openproject
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openproject
  template:
    metadata:
      labels:
        app: openproject
    spec:
      containers:
        - name: openproject
          image: openproject/openproject:16
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: pgdata
              mountPath: /var/openproject/pgdata
            - name: assets
              mountPath: /var/openproject/assets
      restartPolicy: Always
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: mkstack-openproject-pgdata-claim
        - name: assets
          persistentVolumeClaim:
            claimName: mkstack-openproject-assets-claim
